--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">ChartJs.Blazor.Sample.ClientSide</a>
+    <a class="navbar-brand" href="">ChartJs.Blazor Samples</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -40,6 +40,16 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="LinearLineChart">
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Linear LineChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="LogarithmicLineChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>Logarithmic LineChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="TimeLineChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>Time LineChart
             </NavLink>
         </li>
     </ul>
