--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">ChartJs.Blazor.Sample.ServerSide</a>
+    <a class="navbar-brand" href="">ChartJs.Blazor Samples</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -37,16 +37,27 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Linear LineChart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="LogarithmicLineChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>Logarithmic LineChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="TimeLineChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>Time LineChart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
 @code {
-    bool collapseNavMenu = true;
+    bool _collapseNavMenu = true;
 
-    string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    string NavMenuCssClass => _collapseNavMenu ? "collapse" : null;
 
     void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+        _collapseNavMenu = !_collapseNavMenu;
     }
+
 }
