--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -52,6 +52,11 @@
                 <span class="oi oi-graph" aria-hidden="true"></span>Time LineChart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DoughnutChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>DoughChart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
