--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -47,6 +47,11 @@
                 <span class="oi oi-graph" aria-hidden="true"></span>Time LineChart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DoughnutChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>DoughnutChart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
