--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using ChartJs.Blazor.Sample.ServerSide
+@using ChartJs.Blazor.Sample.Shared.Components;
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
 @using ChartJs.Blazor.Sample.Shared.Components.LineChart;
