--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -57,6 +57,16 @@
                 <span class="oi oi-graph" aria-hidden="true"></span>DoughChart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PieChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>PieChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PolarAreaChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>PolarAreaChart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
