--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -52,6 +52,16 @@
                 <span class="oi oi-graph" aria-hidden="true"></span>DoughnutChart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PieChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>DoughnutChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PolarAreaChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>PolarAreaChart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
