--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -13,18 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
             <NavLink class="nav-link" href="SimpleBarChart">
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="HorizontalBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Horizontal BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
