--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -13,13 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="SimpleBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="SimpleBarChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
+            <NavLink class="nav-link" href="HorizontalBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Horizontal BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
