Fixed some names

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
@@ -8,7 +8,7 @@
 @using ChartJs.Blazor.ChartJS.Common.Wrappers
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.Util
-<h2>Simple Bar Chart</h2>
+<h2>Horizontal Bar Chart</h2>
 <div class="row">
     <button class="btn btn-primary" @onclick="OnClick">Update Chart</button>
 </div>
