--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/StackedBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/StackedBarChartComponent.razor
@@ -6,7 +6,7 @@
 @using ChartJs.Blazor.ChartJS.Common.Wrappers
 @using ChartJs.Blazor.Util
 
-<h1>Bar Chart</h1>
+<h1>Stacked Bar Chart</h1>
 
 <ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300"/>
 
