--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
@@ -8,7 +8,7 @@
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.Util
 
-<h1>Bar Chart</h1>
+<h1>Time Bar Chart</h1>
 
 <ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300"/>
 
