--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
@@ -13,12 +13,17 @@
 <h2>Time Line Chart</h2>
 <ChartJsLineChart @ref="_lineChartJs" Config="@_lineConfig" Width="600" Height="300" />
 
+<div class="row">
+    <button class="btn btn-primary" @onclick="OnClick">Fill On/Off</button>
+</div>
+
 @code
 {
 
     LineConfig _lineConfig;
     ChartJsLineChart _lineChartJs;
     const string DeCh = "de-ch";
+    LineDataset<TimeTuple<int>> _tempDataSet;
     private bool _localeChangeWasAttempted = false;
 
     WeatherForecastService _forecastService = new WeatherForecastService();
@@ -66,7 +71,7 @@
                 Scales = new Scales
                 {
                     xAxes = new List<CartesianAxis>
-                {
+            {
                         new TimeAxis
                         {
                             Distribution = TimeDistribution.Linear,
@@ -83,7 +88,7 @@
                             },
                             ScaleLabel = new ScaleLabel
                             {
-                                LabelString = "Zeit"
+                                LabelString = "Time"
                             }
                         }
                     }
@@ -98,11 +103,11 @@
 
         var forecasts = await _forecastService.GetForecastAsync(DateTime.Now, 2);
 
-        var tempDataSet = new LineDataset<TimeTuple<int>>
+        _tempDataSet = new LineDataset<TimeTuple<int>>
         {
             BackgroundColor = "#ff6384",
             BorderColor = "#ff6384",
-            Label = "Temperatur in C°",
+            Label = "Temperature in C°",
             Fill = false,
             BorderWidth = 2,
             PointRadius = 3,
@@ -110,13 +115,19 @@
             SteppedLine = SteppedLine.False
         };
 
-        tempDataSet.AddRange(forecasts.Select(p => new TimeTuple<int>(new Moment(p.Date), p.TemperatureC)));
-        _lineConfig.Data.Datasets.Add(tempDataSet);
+        _tempDataSet.AddRange(forecasts.Select(p => new TimeTuple<int>(new Moment(p.Date), p.TemperatureC)));
+        _lineConfig.Data.Datasets.Add(_tempDataSet);
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await TryChangeLocale();
+    }
+
+    private void OnClick()
+    {
+        _tempDataSet.Fill = !_tempDataSet.Fill;
+        _lineChartJs.Update();
     }
 
 }
