Added a Bubble chart page

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
@@ -26,7 +26,7 @@
     LineDataset<TimeTuple<int>> _tempDataSet;
     private bool _localeChangeWasAttempted = false;
 
-    WeatherForecastService _forecastService = new WeatherForecastService();
+    readonly WeatherForecastService _forecastService = new WeatherForecastService();
 
     private async Task TryChangeLocale()
     {
