--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -67,6 +67,11 @@
                 <span class="oi oi-graph" aria-hidden="true"></span>Bubble Chart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ScatterChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>Scatter Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
