Added a RadarChart sample

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
@@ -45,7 +45,7 @@
                     {
                                 new LinearCartesianAxis
                                 {
-                                    Ticks = new LinearCartesianTicks()
+                                    Ticks = new LinearCartesianTicks
                                     {
                                         AutoSkip = false,
                                         Min = 0 // Otherwise the lowest value in the dataset won't be visible
