--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -72,6 +72,11 @@
                 <span class="oi oi-graph" aria-hidden="true"></span>Scatter Chart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="RadarChart">
+                <span class="oi oi-graph" aria-hidden="true"></span>Radar Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
