--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -54,7 +54,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="PieChart">
-                <span class="oi oi-graph" aria-hidden="true"></span>DoughnutChart
+                <span class="oi oi-graph" aria-hidden="true"></span>PieChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
