Everyone loves colors

--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -14,27 +14,27 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="SimpleBarChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
+                <span class="oi oi-bar-chart" aria-hidden="true"></span>Simple BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="HorizontalBarChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Horizontal BarChart
+                <span class="oi oi-bar-chart" aria-hidden="true"></span>Horizontal BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="StackedBarChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Stacked BarChart
+                <span class="oi oi-bar-chart" aria-hidden="true"></span>Stacked BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="TimeBarChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Time BarChart
+                <span class="oi oi-bar-chart" aria-hidden="true"></span>Time BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="LinearLineChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Linear LineChart
+                <span class="oi oi-graph" aria-hidden="true"></span>Linear LineChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -54,7 +54,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="PieChart">
-                <span class="oi oi-graph" aria-hidden="true"></span>PieChart
+                <span class="oi oi-pie-chart" aria-hidden="true"></span>PieChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
