--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/SimpleBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/SimpleBarChartComponent.razor
@@ -6,6 +6,7 @@
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.ChartJS.Common.Wrappers
 @using ChartJs.Blazor.Charts
+@using ChartJs.Blazor.Util
 <h2>Simple Bar Chart</h2>
 <div class="row">
     <button class="btn btn-primary" @onclick="OnClick">Update Chart</button>
@@ -64,10 +65,10 @@
         _barDataSet = new BarDataset<DoubleWrapper>
         {
             Label = "My double dataset",
-            BackgroundColor = new[] { "#242968", "#218ba5", "#11af66", "#af9d11" },
+            BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
             BorderWidth = 0,
-            HoverBackgroundColor = "#f06384",
-            HoverBorderColor = "#f06384",
+            HoverBackgroundColor = ColorUtil.RandomColorString(),
+            HoverBorderColor = ColorUtil.RandomColorString(),
             HoverBorderWidth = 1,
             BorderColor = "#ffffff"
         };
