--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
@@ -58,7 +58,7 @@
         var barSet = new BarDataset<TimeTuple<double>>
         {
             Label = "My time-double dataset",
-            BackgroundColor = new[] { "#242968", "#218ba5", "#11af66", "#af9d11" },
+            BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
             BorderWidth = 1,
             HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
             HoverBorderColor = "#020202",
