--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LogarithmicLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LogarithmicLineChartComponent.razor
@@ -98,8 +98,8 @@
 
         var tempPerDaySet = new LineDataset<Point>
         {
-            BackgroundColor = "#63ff84",
-            BorderColor = "#63ff84",
+            BackgroundColor = ColorUtil.RandomColorString(),
+            BorderColor = ColorUtil.RandomColorString(),
             Label = "Temp (F) per Day",
             Fill = false,
             BorderWidth = 1,
