--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LinearLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LinearLineChartComponent.razor
@@ -106,8 +106,8 @@
 
         _tempPerDaySet = new LineDataset<Point>
         {
-            BackgroundColor = "#63ff84",
-            BorderColor = "#63ff84",
+            BackgroundColor = ColorUtil.RandomColorString(),
+            BorderColor = ColorUtil.RandomColorString(),
             Label = "Temp (F) per Day",
             Fill = false,
             BorderWidth = 1,
