--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/PolarAreaChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/PolarAreaChartComponent.razor
@@ -1,6 +1,7 @@
 ﻿@using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.PolarAreaChart
 @using ChartJs.Blazor.ChartJS.Common.Properties
+@using ChartJs.Blazor.Util
 
 <h1>Polar Area Chart</h1>
 
@@ -34,10 +35,10 @@
 
         var polarAreaSet = new PolarAreaDataset
         {
-            BackgroundColor = new[] {"#ff6384", "#55ee84", "#4463ff", "#efefef"},
+            BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
             BorderWidth = 0,
-            HoverBackgroundColor = "#f06384",
-            HoverBorderColor = "#f06384",
+            HoverBackgroundColor = ColorUtil.RandomColorString(),
+            HoverBorderColor = ColorUtil.RandomColorString(),
             HoverBorderWidth = 1,
             BorderColor = "#ffffff",
         };
