Added the Welcome and About pages

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/AboutComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/AboutComponent.razor
@@ -5,6 +5,7 @@
     }
 </style>
 
+
 <div class="container-fluid bg-1 text-center">
     <h3>Who Am I?</h3>
     <img src="https://0.gravatar.com/avatar/32203bd5293bf7fc974bf777bc7ad27d?s=400&d=mm" class="img-thumbnail" alt="ö">
@@ -26,5 +27,5 @@
     </p>
 </div>
 
-@code{
+@functions{
 }
