--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Pages/Index.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Pages/Index.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code
+{
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+
+        NavigationManager.NavigateTo("/welcome");
+    }
+
+}
