--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -8,8 +8,8 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="welcome">
+                <span class="oi oi-home" aria-hidden="true"></span>Welcome
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -75,6 +75,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="RadarChart">
                 <span class="oi oi-graph" aria-hidden="true"></span>Radar Chart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="about">
+                <span class="oi oi-info" aria-hidden="true"></span>About
             </NavLink>
         </li>
     </ul>
