--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/IndexComponent.cshtml
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/IndexComponent.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container-fluid bg-1 text-center">
     <h2>
-        Welcome to the ChatJs.Blazor samples page.
+        Welcome to the ChartJs.Blazor samples page.
     </h2>
 </div>
 
