--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/StackedBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/StackedBarChartComponent.razor
@@ -1,5 +1,4 @@
-﻿@using System.Drawing
-@using ChartJs.Blazor.ChartJS.BarChart
+﻿@using ChartJs.Blazor.ChartJS.BarChart
 @using ChartJs.Blazor.ChartJS.BarChart.Axes
 @using ChartJs.Blazor.ChartJS.Common.Axes
 @using ChartJs.Blazor.Charts
@@ -85,5 +84,6 @@
         barSet3.AddRange(new double[] {5, 6, 7, 8}.Wrap());
         _config.Data.Datasets.Add(barSet3);
     }
+
 
 }
