Renamed the interop files

--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Pages/_Host.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Pages/_Host.cshtml
@@ -30,7 +30,7 @@
     <script src="_content/ChartJs.Blazor/Chart.min.js" type="text/javascript" language="javascript"></script>
 
     <!-- This is the glue between the C# code and the ChartJs charts -->
-    <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="_content/ChartJs.Blazor/ChartJsBlazorInterop.js" type="text/javascript" language="javascript"></script>
 
     <!-- Some styling -->
     <link rel="stylesheet" href="_content/ChartJs.Blazor/ChartJSBlazor.css" />
