Added a new sample that shows .Net click handlers

--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
@@ -8,5 +8,6 @@
 @using ChartJs.Blazor.Sample.Shared.Components;
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
 @using ChartJs.Blazor.Sample.Shared.Components.LineChart;
+@using ChartJs.Blazor.Sample.Shared.Components.Handlers;
 @using ChartJs.Blazor;
 @using ChartJs.Blazor.Sample;
