--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/LegendClickHandlerComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/LegendClickHandlerComponent.razor
@@ -12,6 +12,7 @@
 
 <ChartJsPieChart @ref="_doughnutChartJs" Config="@_config" Width="600" Height="300"/>
 
+<text>In each entry, the property "index" refers to the dataset index</text>
 <textarea	rows="@Rows" 
 			@bind-value="@LegendItems"
 			@bind-value:event="oninput"
