Added another fun sample

--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
@@ -10,3 +10,4 @@
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
 @using ChartJs.Blazor.Sample.Shared.Components.LineChart;
 @using ChartJs.Blazor.Sample.Shared.Components.Handlers;
+@using ChartJs.Blazor.Sample.Shared.Components.Fun;
