--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
@@ -9,5 +9,6 @@
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
 @using ChartJs.Blazor.Sample.Shared.Components.LineChart;
 @using ChartJs.Blazor.Sample.Shared.Components.Handlers;
+@using ChartJs.Blazor.Sample.Shared.Components.Fun;
 @using ChartJs.Blazor;
 @using ChartJs.Blazor.Sample;
