--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -82,6 +82,11 @@
 					             <span class="oi oi-info" aria-hidden="true"></span>LegendOnClickHandler
 				             </NavLink>
 			             </li>
+						 <li class="nav-item px-3">
+				             <NavLink class="nav-link" href="SineLineChart">
+					             <span class="oi oi-info" aria-hidden="true"></span>Sine Line Chart
+				             </NavLink>
+			             </li>
 			             <li class="nav-item px-3">
 				             <NavLink class="nav-link" href="about">
 					             <span class="oi oi-info" aria-hidden="true"></span>About
