--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/SimpleBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/SimpleBarChartComponent.razor
@@ -9,7 +9,7 @@
 @using ChartJs.Blazor.Util
 <h2>Simple Bar Chart</h2>
 <div class="row">
-	<button class="btn btn-primary" @onclick="AddData">Ad Data</button>
+	<button class="btn btn-primary" @onclick="AddData">Add Data</button>
 	        <button class="btn btn-primary" @onclick="RemoveData">Remove Data</button>
 	                </div>
 	                <ChartJsBarChart @ref="_barChart"
