--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -78,8 +78,8 @@
 				             </NavLink>
 			             </li>
 			              <li class="nav-item px-3">
-				             <NavLink class="nav-link" href="LegendOnClickHandler">
-					             <span class="oi oi-info" aria-hidden="true"></span>LegendOnClickHandler
+				             <NavLink class="nav-link" href="OnClickHandler">
+					             <span class="oi oi-info" aria-hidden="true"></span>OnClickHandler
 				             </NavLink>
 			             </li>
 						 <li class="nav-item px-3">
