--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/DotNetInstanceClickHandlerComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/DotNetInstanceClickHandlerComponent.razor
@@ -1,18 +1,18 @@
-@using ChartJs.Blazor.ChartJS.Common.Legends
-@using ChartJs.Blazor.ChartJS.Common.Legends.OnClickHandler
+@using ChartJs.Blazor.ChartJS.Common.Handlers
+@using ChartJs.Blazor.ChartJS.Common.Handlers.OnClickHandler
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.PieChart
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.Util
 @using Newtonsoft.Json
 
-<h1>Legend Item Click Handler</h1>
-<h3>Click the legend items</h3>
+<h1>.Net Instance Click Handler</h1>
+<h3>Click the legend items and the chart data itself</h3>
 <h4>Browse the code to see how to register a .Net click handler for legend items.</h4>
 
 <ChartJsPieChart @ref="_doughnutChartJs" Config="@_config" Width="600" Height="300"/>
 
-<text>In each entry, the property "index" refers to the dataset index</text>
+<text>In each entry, the property "index" refers to the data index in that dataset</text>
 <textarea	rows="@Rows" 
 			@bind-value="@LegendItems"
 			@bind-value:event="oninput"
@@ -45,7 +45,8 @@
 				Legend = new Legend()
 				{
 					OnClick = new DotNetInstanceClickHandler(OnLegendClickHandler)
-				}
+				},
+				OnClick = new DotNetInstanceClickHandler(OnClickHandler)
 			}
 		};
 
@@ -67,6 +68,14 @@
 
 	[JSInvokable]
 	public void OnLegendClickHandler(object sender, object args)
+	{
+		LegendItems += JsonConvert.SerializeObject(JsonConvert.DeserializeObject($"{Environment.NewLine}{args}"), Formatting.Indented);
+		Rows = Math.Max(3, LegendItems.Split(new[] {Environment.NewLine}, StringSplitOptions.None).Length + 1);
+		StateHasChanged();
+	}
+
+	[JSInvokable]
+	public void OnClickHandler(object sender, object args)
 	{
 		LegendItems += JsonConvert.SerializeObject(JsonConvert.DeserializeObject($"{Environment.NewLine}{args}"), Formatting.Indented);
 		Rows = Math.Max(3, LegendItems.Split(new[] {Environment.NewLine}, StringSplitOptions.None).Length + 1);
