Add milisecond to example

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
@@ -82,9 +82,9 @@
                             },
                             Time = new TimeOptions
                             {
-                                Unit = TimeMeasurement.Hour,
-                                Round = TimeMeasurement.Hour,
-                                TooltipFormat = "DD.MM.YYYY HH:mm",
+                                Unit = TimeMeasurement.Millisecond,
+                                Round = TimeMeasurement.Millisecond,
+                                TooltipFormat = "DD.MM.YYYY HH:mm:ss:SSS",
                                 DisplayFormats = TimeDisplayFormats.DE_CH
                             },
                             ScaleLabel = new ScaleLabel
