Extended the T4 template for BarChart axes to initialize the Offset property to true for the category axis and false for the other.

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
@@ -37,7 +37,8 @@
                             Time = new TimeOptions
                             {
                                 Unit = TimeMeasurement.Hour
-                            }
+                            },
+                            Offset = true
                         }
                     },
                     YAxes = new List<CartesianAxis>
